--- a/UI.html
+++ b/UI.html
@@ -3,13 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login Form</title>
     <link rel="stylesheet" href="uicss.css">
-    <style>
-        #first{
-            text-align: center;
-        }
-    </style>
 </head>
 <body class="main">
     <div id="first">
@@ -31,10 +26,11 @@
                         <input type="password" id="password" placeholder="Password" style="width:235px; height: 49%;" required>
                     </label> 
                 </div>
-                <br><a href="a">
+                <br><a href="./dashboard.html">
                     <button class="button" type="button" value="login"> Log In </button> </a>
-                    <p id="fp">Forgot Password?</p>
-                <hr> <a href="a">
+                    <a href="./forgotPassword.html">
+                    <p id="fp">Forgot Password?</p> </a>
+                <hr> <a href="./createNewAccount.html">
                 <button type="button" class="newAccount">Create New Account</button> </a>
             </form>
         </div>
