--- a/UI.html
+++ b/UI.html
@@ -18,7 +18,7 @@
                 </p>            
                 <div class="email" >
                     <label for="email" class="id"> 
-                        <input type="email" id="email" placeholder="Email or Phone_Number" style="width:235px; height: 49%;" required>
+                        <input type="email" id="email" placeholder="Email or Phone Number" style="width:235px; height: 49%;" required>
                     </label>
                 </div>
                 <div class="password">
