made new updates

--- a/createNewAccount.html
+++ b/createNewAccount.html
@@ -4,45 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create New Account</title>
-    <style>
-        .main{
-            background-image: url(./Deer.webp);
-            image-resolution: none;
-            background-size: cover; 
-            background-repeat: no-repeat; 
-            background-position: center; 
-        }
-        .fname.lame{
-            width:235px; 
-            height: 49%;
-            margin-bottom: 7px; ;
-        }
-            .name{
-             background-color: white;
-            padding: 15px 32px;
-            border: blue ;
-            cursor: pointer;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 50vh;
-            text-align: center;
-            height: 150px;
-            width: 300px;
-            margin-left: 50%;
-            margin-right: 50%;
-            margin-top: 165px;
-            border-radius: 10px;
-            box-shadow: 6px 6px 6px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 400px;
-            border: solid 5px ;
-            flex-wrap: nowrap;
-            background: rgba(255, 255, 255, 0.7); 
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-                    }
-    </style>
+    <link rel="stylesheet" href="forcreateacc.css">
     <script>
           function showMessage() {
             alert("You have created your Account Successfully! ")
@@ -78,8 +40,8 @@
              </label>
              <a href="./UI.html">
                 <button type="button" class="back">Back</button></a>
-                <a href="./UI.html">
-                    <button type="submit" class="Login"  onclick="showMessage()">Login</button> </a>
+            <a href="./UI.html">
+                <button type="button" class="Login"  onclick="showMessage()">Login</button> </a>
         </form>
     </div>
 </body>
