--- a/dashboard.html
+++ b/dashboard.html
@@ -89,12 +89,14 @@
       <table>
         <h4>Zoo</h4>
         <tr class="table">
-            <button type="button" class="button"> Animal Details </button>
+          <a href="./AnimalDetail.html">
+            <button type="button" class="button"> Animal Details </button> 
+          </a>
             <button type="button" class="button"> Number Of Visitor</button>
             <button type="button" class="button"> Status </button>
         </tr>
         <hr>
-        <h4>Me</h4>
+        <h4>Staffs</h4>
         <tr class="table">
             <button type="button" class="button"> Present Staffs </button>
             <button type="button" class="button"> Yesterday Present Staffs</button>
