--- a/UI.html
+++ b/UI.html
@@ -26,8 +26,8 @@
                         <input type="password" id="password" placeholder="Password" style="width:235px; height: 49%;" required>
                     </label> 
                 </div>
-                <br><a href="./dashboard.html">
-                    <button class="button" type="button" value="login"> Log In </button> </a>
+                <br>
+                    <button class="button" type="button" id="login"> Log In </button>
                     <a href="./forgotPassword.html">
                     <p id="fp">Forgot Password?</p> </a>
                 <hr> <a href="./createNewAccount.html">
@@ -35,4 +35,7 @@
             </form>
         </div>
 </body>
+<script src="jsforui.js">
+    
+</script>
 </html>
