--- a/dashboard.html
+++ b/dashboard.html
@@ -82,7 +82,7 @@
 <body>
         <header>
             <span>DashBoard</span>
-            <span><button class="admin">Admin</button></span>
+            <span> <a href="./UI.html"><button class="admin">Admin</button></a></span>
         </header>
 <section>
     <article>
