--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -62,11 +62,9 @@
             <hr>
             <div>
             <a href="./UI.html">
-                <button type="button" id="Cancel"> Cancel</button> 
-            </a>
+                <button type="button" id="Cancel">Cancel</button></a>
             <a href="a">
-                <button type="submit">Search</button>
-            </a>
+                <button type="submit">Search</button></a>
             </div>
         </form>
     </div>
