--- a/NumberOfVisitor.html
+++ b/NumberOfVisitor.html
@@ -6,24 +6,178 @@
     <title>Document</title>
     <style>
         table, th, td {
-    border:3px solid black;
-    border-collapse: collapse;
-}
+                border:3px solid black;
+            border-collapse: collapse;
+        }
+
+        header{
+        text-align: center;
+        background-image: url(./Tiger.jpg);
+    }
     </style>
 </head>
+    <header>
+        <h1>Guests</h1>
+    </header>
 
 <body class="body">
-    <table>
-        <tr>
-            <th rowspan="3">
-                Number Of Visitors In a day 
-            </th>
-        </tr>
-        <tr>
-            <td>Nepali Visitor</td>
-            <td>Foregin Visitor</td>
-            <td>Child(Under Age 5)</td>
-        </tr>
-    </table>
+        <div>
+            <table>
+            <tr>
+                <th colspan="3">
+                    Number Of Visitors In a day 
+                </th>
+            </tr>
+            <tr>
+                <td>Nepali Visitor</td>
+                <td>Foregin Visitor</td>
+                <td>Child(Under Age 5)</td>
+            </tr>
+            <tr>
+                <td>lbdvso</td>
+                <td>vsdjvgd</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            </table>
+            <br>
+            <br>
+            <table>
+                <tr>
+                    <th colspan="3">Number Of visitor in a month</th>
+                </tr>
+                <tr>
+                    <td>Nepali Visitor</td>
+                    <td>Foregin Visitor</td>
+                    <td>Child(Under Age 5)</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+            <br>
+            <br>
+            <table>
+                <tr>
+                    <th colspan="3">Number Of visitor in a Year</th>
+                </tr>
+                <tr>
+                    <td>Nepali Visitor</td>
+                    <td>Foregin Visitor</td>
+                    <td>Child(Under Age 5)</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+        </div>
 </body>
 </html>
