--- a/dashboard.html
+++ b/dashboard.html
@@ -37,7 +37,7 @@
         clear: both;
       }
 
-      /* Style the footer */
+      
       footer {
         background-color: #777;
         padding: 10px;
@@ -90,9 +90,8 @@
         <h4>Zoo</h4>
         <tr class="table">
           <a href="./AnimalDetail.html">
-            <button type="button" class="button"> Animal Details </button> 
-          </a>
-            <button type="button" class="button"> Number Of Visitor</button>
+            <button type="button" class="button"> Animal Details </button></a>
+            <a href="./NumberOfVisitor.html"><button type="button" class="button"> Number Of Visitor</button></a>
             <button type="button" class="button"> Status </button>
         </tr>
         <hr>
