--- a/UI.html
+++ b/UI.html
@@ -26,7 +26,7 @@
                         <input type="password" id="password" placeholder="Password" style="width:235px; height: 49%;" required>
                     </label> 
                 </div>
-                <br><a href="./dashboard.html">
+                <br><a href="./sasasasa.html">
                     <button class="button" type="button" value="login"> Log In </button> </a>
                     <a href="./forgotPassword.html">
                     <p id="fp">Forgot Password?</p> </a>
